# ieor-4579

./: .gitignore  extension-plan.md  pyproject.toml
Hydra-Reviewer/: README.md  manual_review_comments.txt
Hydra-Reviewer/Code/Hydra-Reviewer/: filter_dataset_python.py  generate_data.py  json_and_jsonl_handler.py  pyproject.toml  requirements.txt  run.py
Hydra-Reviewer/Code/Hydra-Reviewer/Agent/: __init__.py  code_formatting_style_agent.py  code_logic_readability_agent.py  code_semantic_correctness_agent.py  code_syntax_correctness_agent.py  code_testing_agent.py  comment_quality_agent.py  comment_style_agent.py  compatibility_agent.py  comprehensive_chatgpt.py  config.py  end2end_gpt.py  extensibility_agent.py  fault_tolerance_agent.py  get_additional_information_agent.py  identifier_naming_readability_agent.py  identifier_naming_style_agent.py  import_agent.py  name_and_logic_consistency_agent.py  performance_agent.py  programming_handling_conventions_agent.py  prompt_template.py  redundancy_agent.py  runtime_observability_agent.py  security_compliance_agent.py  suggestions_rerank_agent.py  summarizer_agent.py  summarizer_clean_up_agent.py
Hydra-Reviewer/Code/Hydra-Reviewer/search/: python.py
Hydra-Reviewer/Code/Hydra-Reviewer/utils/: json2jsonl.py  json2xlsx.py  jsonl2json.py  jsonl2xlsx.py  xlsx2jsonl.py
Hydra-Reviewer/Dataset/: GeneratedDatasetPython.jsonl  ManualReviewSubset.jsonl  generate_data.py  view_dataset.py
Hydra-Reviewer/Results/: RQ1.txt  SemanticSimilarity.txt  example.py  semantic_similarity.py  unseen_dataset_python.output
(+5 files in other folders)
